--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
-language: java
-script: ant -f linux/build.xml
+language: objective-c
+script: ant -f macosx/build.xml dmg
 jdk:
   - oraclejdk7
   - openjdk7
   - openjdk6
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq tidy javahelp2
-  - sudo apt-get install -qq zlib1g-dev libjpeg-dev libxmu-dev libglu1-mesa-dev freeglut3-dev libxi-dev liblzma-dev
-  - sudo apt-get install -qq autoconf automake libtool nasm
+  - export JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Home
+  - brew install autoconf automake nasm tidy libtool gcc40
