--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ jdk:
   - openjdk6
 before_install:
   - export JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Home
+  - brew update
   - brew install autoconf automake nasm tidy libtool gcc40
