--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,7 @@ before_install:
   - export JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Home
   - brew update
   - brew install autoconf automake nasm libtool
+  - find / -name 'limits.h' 2>/dev/null
+  - find / -name 'ctype.h' 2>/dev/null
+  - find / -name 'errorno.h' 2>/dev/null
+  - find / -name 'fcntl.h' 2>/dev/null
