--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ jdk:
 before_install:
   - export JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Home
   - brew update
-  - brew install autoconf automake nasm libtool gcc47 glibc
+  - brew install autoconf automake nasm libtool glib
