--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,4 @@ jdk:
 before_install:
   - export JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Home
   - brew update
-  - rm -rf /usr/local/bin/{autoconf,automake,nasm,libtool,glib}
-  - brew install autoconf automake nasm libtool glib
+  - brew install --force autoconf automake nasm libtool glib
