--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: objective-c
 script: ant -f macosx/build.xml dmg
 jdk:
-  - oraclejdk7
-  - openjdk7
+#  - oraclejdk7
+#  - openjdk7
   - openjdk6
 before_install:
   - export JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Home
   - brew update
-  - brew install --force autoconf automake nasm libtool glib
+  - brew install --force libtool glib
+#  - brew install --force autoconf automake nasm
