--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jdk:
 before_install:
   - export JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Home
   - brew update
-  - brew uninstall --force libtool glib
+  - brew uninstall --force libtool
   - brew uninstall --force autoconf automake nasm
-  - brew install --force libtool glib
+  - brew install --force libtool
   - brew install --force autoconf automake nasm
