Removed -Dfgetc=getc_unlocked

--- a/lightcrafts/coprocesses/dcraw/GNUmakefile
+++ b/lightcrafts/coprocesses/dcraw/GNUmakefile
@@ -7,7 +7,7 @@ TARGET_BASE:=		dcraw
 #DEBUG:=		true
 
 EXEC_EXTRA_DEFINES:=	-DNODEPS
-EXEC_LINUX_DEFINES:=	-Dfgetc=getc_unlocked
+EXEC_LINUX_DEFINES:=	#-Dfgetc=getc_unlocked
 EXEC_MACOSX_DEFINES:=	$(EXEC_LINUX_DEFINES)
 EXEC_WINDOWS_DEFINES:=	-DDJGPP
 EXEC_LINUX_LINK:=	-lm
