--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ jdk:
 #  - openjdk7
   - openjdk6
 before_install:
+  - cat /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.8.sdk/usr/include/unistd.h
+  - cat /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.8.sdk/usr/include/strings.h
   - export JAVA_HOME=/System/Library/Frameworks/JavaVM.framework/Home
   - brew update
   - brew uninstall --force libtool
