--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: lightzone
 Section: graphics
 Priority: optional
 Maintainer: Pavel Benak <pavel.benak@gmail.com>
-Build-Depends: debhelper, devscripts, build-essential, ant, git-core, javahelp2, libx11-dev, autoconf (>= 2.56), automake (>= 1.7), libtool (>= 1.4), nasm (>= 2.07), default-jdk (>= 1.6), default-jre-headless (>= 1.6), tidy, liblzma-dev
+Build-Depends: debhelper, devscripts, build-essential, ant, git-core, javahelp2, libx11-dev, autoconf (>= 2.56), automake (>= 1.7), libtool (>= 1.4), nasm (>= 2.07), default-jdk (>= 1.6), default-jre-headless (>= 1.6), tidy, liblzma-dev, libjpeg-turbo8-dev | libturbojpeg1-dev | libjpeg8-dev, liblcms2-dev, zlib1g-dev, libtiff4-dev | libtiff5-dev
 Homepage: http://lightzoneproject.org/
 Standards-Version: 4.0.0
 
