--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: java
 
 os:
   - linux
+  - osx
+
+matrix:
+  allow_failures:
+    - os: osx
 
 jdk:
   - oraclejdk8
@@ -18,9 +23,10 @@ addons:
       - openjdk-6-jdk
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install autoconf clang-omp libtiff little-cms2 pkg-config; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc@7 libtiff little-cms2; fi
 
 script:
-  - ant -f linux/build.xml
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ant -f linux/build.xml; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ant -f macosx/build.xml; fi
 
