--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ os:
   - linux
   - osx
 
+jdk:
+  -
+  - oraclejdk8
+  - openjdk6
+
 matrix:
   allow_failures:
     - os: osx
-
-jdk:
-  - oraclejdk8
-  - openjdk6
 
 addons:
   apt:
@@ -25,6 +26,7 @@ addons:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gcc@7 libtiff little-cms2; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then alias jdk_switcher=':' ; fi
 
 script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ant -f linux/build.xml; fi
